--- a/local/templates/m2property/assets/css/homepage.css
+++ b/local/templates/m2property/assets/css/homepage.css
@@ -25,7 +25,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      filter: brightness(.5);
+      /*filter: brightness(.5);*/
 
       & img {
         object-fit: cover;
