--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -25,7 +25,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      filter: brightness(.5);
+      /*filter: brightness(.5);*/
 
       & img {
         object-fit: cover;
@@ -57,7 +57,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 3;
+    z-index: 6;
     display: flex;
     align-items: center;
 
@@ -71,7 +71,7 @@
       left: 0;
       right: 0;
       margin: 0 auto;
-      z-index: 2;
+      z-index: 6;
     }
 
     & .splide__pagination {
@@ -152,7 +152,7 @@
         max-width: 100%;
       }
 
-      & h1 {
+      & h1, h2 {
         margin-bottom: 50px;
         color: #fff;
 
@@ -836,7 +836,7 @@
   height: 125%;
   top: 0;
   margin: 0 auto;
-  z-index: 2;
+  z-index: 4;
 
   & img {
     object-fit: contain;
