--- a/assets/css/detail-product.css
+++ b/assets/css/detail-product.css
@@ -183,8 +183,12 @@
       line-height: 100%;
       margin-bottom: 56px;
 
-      p {
+      p:not(:last-of-type) {
         padding-bottom: 20px;
+
+        @media(max-width: 600px) {
+          padding-bottom: 15px;
+        }
       }
 
       @media(max-width: 1600px) {
@@ -2758,6 +2762,14 @@
         font-style: normal;
         font-weight: 500;
         line-height: 100%;
+
+        p:not(:last-of-type) {
+          padding-bottom: 20px;
+
+          @media(max-width: 600px) {
+            padding-bottom: 15px;
+          }
+        }
 
         @media(max-width: 992px) {
           display: -webkit-box;
