--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,7 +87,7 @@ body {
 }
 
 h1 {
-  font-size: 60px;
+  font-size: 48px;
   font-style: normal;
   font-weight: 700;
   line-height: 90%;
@@ -121,7 +121,7 @@ h1 {
 
 h2 {
   color: rgba(36, 34, 32, 0.60);
-  font-size: 60px;
+  font-size: 40px;
   font-style: normal;
   font-weight: 700;
   line-height: 90%;
@@ -392,7 +392,7 @@ header {
 
           @media(min-width:1151px) {
             border-radius: 999px;
-            background: rgba(234, 234, 232, 0.50);
+            background: rgba(234, 234, 232, 0.10);
             backdrop-filter: blur(12px);
             padding: 20px 64px;
           }
@@ -461,7 +461,7 @@ header {
 
 
       & .consult {
-        font-size: 20px;
+        font-size: 18px;
         font-style: normal;
         font-weight: 500;
         line-height: 100%;
@@ -469,7 +469,7 @@ header {
         border-radius: 110px;
         background: #FFF;
         box-shadow: 10px 14px 54px 0 rgba(0, 0, 0, 0.13);
-        padding: 20px 32px;
+        padding: 16px 24px;
         transition: all .3s ease-in;
         margin-left: auto;
 
@@ -1208,7 +1208,7 @@ footer {
 
       & .footer-form__title {
         color: rgba(0, 0, 0, 0.70);
-        font-size: 35px;
+        font-size: 32px;
         font-style: normal;
         font-weight: 500;
         line-height: 90%;
@@ -1250,7 +1250,7 @@ footer {
         & li {
           & a {
             color: rgba(36, 34, 32, 0.50);
-            font-size: 25px;
+            font-size: 18px;
             font-style: normal;
             font-weight: 500;
             line-height: 100%;
@@ -1290,7 +1290,7 @@ footer {
         & li {
           & .footer-contacts__label {
             color: rgba(36, 34, 32, 0.40);
-            font-size: 18px;
+            font-size: 16px;
             font-style: normal;
             font-weight: 500;
             line-height: 100%;
@@ -1307,7 +1307,7 @@ footer {
 
           & a {
             color: rgba(36, 34, 32, 0.60);
-            font-size: 25px;
+            font-size: 18px;
             font-style: normal;
             font-weight: 500;
             line-height: 100%;
@@ -1328,7 +1328,7 @@ footer {
 
           & span {
             color: rgba(36, 34, 32, 0.60);
-            font-size: 25px;
+            font-size: 18px;
             font-style: normal;
             font-weight: 500;
             line-height: 100%;
@@ -1408,7 +1408,7 @@ footer {
 
     & .footer-copy {
       color: rgba(36, 34, 32, 0.40);
-      font-size: 18px;
+      font-size: 16px;
       font-style: normal;
       font-weight: 400;
       line-height: 100%;
@@ -1424,7 +1424,7 @@ footer {
 
     & .doc-link {
       color: rgba(36, 34, 32, 0.40);
-      font-size: 18px;
+      font-size: 16px;
       font-style: normal;
       font-weight: 500;
       line-height: 100%;
@@ -1514,14 +1514,14 @@ footer {
   backdrop-filter: blur(17px);
   display: block;
   text-align: center;
-  padding: 20px 30px;
+  padding: 16px;
   width: 100%;
-  max-width: 60%;
-  height: 65px;
+  max-width: 100%;
+  height: 50px;
   margin-top: 70px;
   margin-bottom: 24px;
   color: #FFF;
-  font-size: 25px;
+  font-size: 18px;
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
