--- a/assets/css/detail-product.css
+++ b/assets/css/detail-product.css
@@ -19,7 +19,7 @@
       & h1 {
         color: rgba(36, 34, 32, 0.60);
         font-family: 'Ubuntu';
-        font-size: 50px;
+        font-size: 48px;
         font-style: normal;
         font-weight: 700;
         line-height: 90%;
@@ -84,14 +84,14 @@
 
         & .detail-product_sm-price__num-cur {
           color: #242220;
-          font-size: 40px;
+          font-size: 32px;
           font-style: normal;
           font-weight: 700;
           line-height: 90%;
           margin-bottom: 4px;
 
           @media(max-width: 600px) {
-            font-size: 30px;
+            font-size: 28px;
             font-style: normal;
             line-height: 90%;
             margin-bottom: 14px;
@@ -166,7 +166,7 @@
         max-width: fit-content;
 
         @media(max-width: 600px) {
-          font-size: 20px;
+          font-size: 14px;
           font-style: normal;
           font-weight: 900;
           line-height: 100%;
@@ -177,7 +177,7 @@
 
     & .detail-product_sm__description {
       color: rgba(36, 34, 32, 0.40);
-      font-size: 25px;
+      font-size: 22px;
       font-style: normal;
       font-weight: 700;
       line-height: 100%;
@@ -227,7 +227,7 @@
         backdrop-filter: blur(17px);
         padding: 20px 30px;
         max-width: fit-content;
-        height: 84px;
+        height: 56px;
 
         @media(max-width: 1600px) {
           padding: 10px 20px;
@@ -236,7 +236,7 @@
 
         @media(max-width: 600px) {
           padding: 8px 8px 8px 20px;
-          height: 48px;
+          height: 40px;
 
           & svg {
             width: 16px;
@@ -246,7 +246,7 @@
 
         span {
           color: #242220;
-          font-size: 25px;
+          font-size: 18px;
           font-style: normal;
           font-weight: 700;
           line-height: 100%;
@@ -256,7 +256,7 @@
           }
 
           @media(max-width: 600px) {
-            font-size: 14px;
+            font-size: 12px;
             font-style: normal;
             font-weight: 500;
             line-height: 100%;
@@ -275,7 +275,7 @@
         backdrop-filter: blur(17px);
         padding: 20px 30px;
         max-width: fit-content;
-        height: 84px;
+        height: 56px;
 
         @media(max-width: 1600px) {
           padding: 10px 20px;
@@ -284,12 +284,12 @@
 
         @media(max-width: 600px) {
           padding: 8px 8px 8px 20px;
-          height: 48px;
+          height: 40px;
         }
 
         &>span {
           color: #FFF;
-          font-size: 25px;
+          font-size: 18px;
           font-style: normal;
           font-weight: 700;
           line-height: 100%;
@@ -299,7 +299,7 @@
           }
 
           @media(max-width: 600px) {
-            font-size: 14px;
+            font-size: 12px;
             font-style: normal;
             font-weight: 500;
             line-height: 100%;
@@ -603,7 +603,7 @@
             background-color: #E8E8E6;
             padding: 10px 20px;
             color: #242220;
-            font-size: 25px;
+            font-size: 18px;
             font-style: normal;
             font-weight: 500;
             line-height: 100%;
@@ -812,7 +812,7 @@
         top: 20px;
         left: 20px;
         color: #FFF;
-        font-size: 18px;
+        font-size: 16px;
         font-style: normal;
         font-weight: 400;
         line-height: 28px;
@@ -1127,13 +1127,13 @@
 
         & span {
           color: rgba(255, 255, 255, 0.60);
-          font-size: 25px;
+          font-size: 22px;
           font-style: normal;
           font-weight: 500;
           line-height: 100%;
 
           @media(max-width: 992px) {
-            font-size: 14px;
+            font-size: 12px;
             font-style: normal;
             font-weight: 500;
             line-height: 100%;
@@ -1143,14 +1143,14 @@
 
       & .metro {
         color: rgba(255, 255, 255, 0.60);
-        font-size: 25px;
+        font-size: 22px;
         font-style: normal;
         font-weight: 500;
         line-height: 100%;
         position: relative;
 
         @media(max-width: 992px) {
-          font-size: 14px;
+          font-size: 12px;
           font-style: normal;
           font-weight: 500;
           line-height: 100%;
@@ -1203,7 +1203,7 @@
 
     & p {
       color: #FFF;
-      font-size: 30px;
+      font-size: 22px;
       font-style: normal;
       font-weight: 500;
       line-height: 100%;
@@ -1366,7 +1366,7 @@
 
           & span {
             color: #242220;
-            font-size: 25px;
+            font-size: 18px;
             font-style: normal;
             font-weight: 500;
             line-height: 100%;
@@ -1407,7 +1407,7 @@
 
           & span {
             color: #fff;
-            font-size: 25px;
+            font-size: 18px;
             font-style: normal;
             font-weight: 500;
             line-height: 100%;
@@ -1449,7 +1449,7 @@
             & span {
               color: #242220;
 
-              font-size: 18px;
+              font-size: 16px;
               font-style: normal;
               font-weight: 400;
               line-height: 100%;
@@ -1485,10 +1485,18 @@
       gap: 10px;
       max-width: fit-content;
     }
+    /*
+    & svg {
+      @media(max-width: 600px) {
+        width: 16px;
+        height: 16px;
+      }
+    }
+      */
 
     & span {
       color: #242220;
-      font-size: 25px;
+      font-size: 18px;
       font-style: normal;
       font-weight: 500;
       line-height: 100%;
@@ -1516,7 +1524,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
-    padding: 15px 10px 15px 30px;
+    padding: 13px 10px 13px 30px;
     height: 65px;
 
     @media(max-width: 992px) {
@@ -1529,7 +1537,7 @@
 
     & span {
       color: #fff;
-      font-size: 25px;
+      font-size: 18px;
       font-style: normal;
       font-weight: 500;
       line-height: 100%;
@@ -1571,7 +1579,7 @@
       & span {
         color: #242220;
 
-        font-size: 18px;
+        font-size: 16px;
         font-style: normal;
         font-weight: 400;
         line-height: 100%;
@@ -1640,7 +1648,7 @@
 
           & .product-feed__main-info__item-label {
             color: rgba(36, 34, 32, 0.40);
-            font-size: 25px;
+            font-size: 22px;
             font-style: normal;
             font-weight: 500;
             line-height: 100%;
@@ -1810,7 +1818,7 @@
 
             &.small {
               color: rgba(0, 0, 0, 0.70);
-              font-size: 25px;
+              font-size: 18px;
               font-style: normal;
               font-weight: 500;
               line-height: 100%;
@@ -1938,7 +1946,7 @@
 
           & span {
             color: rgba(0, 0, 0, 0.40);
-            font-size: 35px;
+            font-size: 32px;
             font-style: normal;
             font-weight: 500;
             line-height: 100%;
@@ -1963,7 +1971,7 @@
 
           & .plans-tabs__button-price {
             color: #242220;
-            font-size: 40px;
+            font-size: 32px;
             font-style: normal;
             font-weight: 600;
             line-height: 90%;
@@ -1974,7 +1982,7 @@
             gap: 5px;
 
             @media(max-width:992px) {
-              font-size: 25px;
+              font-size: 18px;
               font-style: normal;
               line-height: 90%;
             }
@@ -1987,7 +1995,7 @@
               line-height: 90%;
 
               @media(max-width:992px) {
-                font-size: 25px;
+                font-size: 12px;
                 font-style: normal;
                 line-height: 90%;
               }
@@ -2113,6 +2121,7 @@
       & .plans-tabs__map-inner {
         display: flex;
         flex-direction: column;
+        justify-content: center;
         padding: 40px;
         gap: 32px;
         border-radius: 20px;
@@ -2121,6 +2130,9 @@
 
         @media(max-width: 1200px) {
           min-height: initial;
+        }
+        @media(max-width: 992px) {
+          padding: 20px;
         }
 
 
@@ -2154,7 +2166,7 @@
               margin-bottom: 20px;
 
               @media(max-width: 992px) {
-                font-size: 20px;
+                font-size: 18px;
                 font-style: normal;
                 line-height: 90%;
                 margin-bottom: 10px;
@@ -2167,7 +2179,7 @@
 
               & address {
                 color: rgba(36, 34, 32, 0.40);
-                font-size: 25px;
+                font-size: 18px;
                 font-style: normal;
                 font-weight: 500;
                 line-height: 100%;
@@ -2184,7 +2196,7 @@
               & span {
                 position: relative;
                 color: rgba(36, 34, 32, 0.40);
-                font-size: 25px;
+                font-size: 18px;
                 font-style: normal;
                 font-weight: 500;
                 line-height: 100%;
@@ -2223,7 +2235,7 @@
             border-radius: 110px;
             background: #FF7400;
             backdrop-filter: blur(17px);
-            padding: 20px 30px;
+            padding: 19px 24px;
 
             @media(max-width:992px) {
               padding: 10px;
@@ -2239,7 +2251,7 @@
 
             & span {
               color: #FFF;
-              font-size: 25px;
+              font-size: 18px;
               font-style: normal;
               font-weight: 500;
               line-height: 100%;
@@ -2456,7 +2468,7 @@
 
       & .point__tab-btn {
         color: rgba(255, 255, 255, 0.50);
-        font-size: 25px;
+        font-size: 22px;
         font-style: normal;
         font-weight: 500;
         line-height: 90%;
@@ -2495,7 +2507,7 @@
 
         &.is-active {
           color: #FFF;
-          font-size: 35px;
+          font-size: 32px;
           font-style: normal;
           font-weight: 500;
           line-height: 90%;
@@ -2505,7 +2517,7 @@
           padding-left: 80px;
 
           @media(max-width: 992px) {
-            font-size: 20px;
+            font-size: 18px;
             font-style: normal;
             padding-left: 60px;
             line-height: 90%;
@@ -2611,14 +2623,14 @@
         & .point__tab-content__name {
           color: #FFF;
           font-family: Ubuntu;
-          font-size: 40px;
+          font-size: 32px;
           font-style: normal;
           font-weight: 700;
           line-height: 90%;
           margin-bottom: 19px;
 
           @media(max-width: 992px) {
-            font-size: 20px;
+            font-size: 18px;
             font-style: normal;
             font-weight: 700;
             line-height: 90%;
@@ -2646,13 +2658,13 @@
 
           & span {
             color: #000;
-            font-size: 20px;
+            font-size: 18px;
             font-style: normal;
             font-weight: 500;
             line-height: 100%;
 
             @media(max-width: 992px) {
-              font-size: 12px;
+              font-size: 10px;
               font-style: normal;
               line-height: 100%;
             }
@@ -2672,6 +2684,7 @@
           background: #FFF;
           box-shadow: 10px 14px 54px 0 rgba(0, 0, 0, 0.13);
           align-items: center;
+          display: flex;
           gap: 2px;
 
           @media(max-width: 992px) {
@@ -2680,13 +2693,13 @@
 
           & span {
             color: #000;
-            font-size: 20px;
+            font-size: 18px;
             font-style: normal;
             font-weight: 500;
             line-height: 100%;
 
             @media(max-width: 992px) {
-              font-size: 12px;
+              font-size: 10px;
               font-style: normal;
               line-height: 100%;
             }
@@ -2758,7 +2771,7 @@
         max-width: 844px;
         position: relative;
         z-index: 3;
-        font-size: 20px;
+        font-size: 18px;
         font-style: normal;
         font-weight: 500;
         line-height: 100%;
@@ -2964,7 +2977,7 @@
 
     & p {
       color: rgba(36, 34, 32, 0.40);
-      font-size: 30px;
+      font-size: 22px;
       font-style: normal;
       font-weight: 500;
       line-height: 100%;
@@ -2973,7 +2986,7 @@
       max-width: 692px;
 
       @media(max-width: 992px) {
-        font-size: 18px;
+        font-size: 12px;
         font-style: normal;
         line-height: 100%;
       }
@@ -2981,14 +2994,14 @@
 
     & .donwload-link {
       color: #FFF;
-      font-size: 25px;
+      font-size: 18px;
       font-style: normal;
       font-weight: 700;
       line-height: 100%;
       display: flex;
       align-items: center;
       gap: 20px;
-      padding: 20px 40px;
+      padding: 16px 24px;
       border-radius: 110px;
       background: #FF7400;
       backdrop-filter: blur(17px);
@@ -2999,8 +3012,13 @@
       position: relative;
       z-index: 2;
 
+      & svg {
+        width: 24px;
+        height: 24px;
+      }
+
       @media(max-width: 992px) {
-        font-size: 14px;
+        font-size: 12px;
         font-style: normal;
         line-height: 100%;
         padding: 8px 12px;
@@ -3079,13 +3097,13 @@
 
           & span {
             color: rgba(36, 34, 32, 0.60);
-            font-size: 25px;
+            font-size: 22px;
             font-style: normal;
             font-weight: 700;
             line-height: 100%;
 
             @media(max-width: 992px) {
-              font-size: 14px;
+              font-size: 12px;
               font-style: normal;
               line-height: 100%;
             }
@@ -3094,7 +3112,7 @@
 
         &>span {
           color: rgba(36, 34, 32, 0.60);
-          font-size: 25px;
+          font-size: 22px;
           font-style: normal;
           font-weight: 700;
           line-height: 100%;
@@ -3102,7 +3120,7 @@
 
           @media(max-width: 992px) {
             padding-left: 20px;
-            font-size: 14px;
+            font-size: 12px;
             font-style: normal;
             line-height: 100%;
           }
@@ -3377,7 +3395,7 @@
 
       & .tab-year {
         color: rgba(255, 255, 255, 0.70);
-        font-size: 35px;
+        font-size: 32px;
         font-style: normal;
         font-weight: 400;
         line-height: 90%;
@@ -3404,13 +3422,13 @@
         & span {
           color: rgba(255, 255, 255, 0.70);
           text-align: center;
-          font-size: 20px;
+          font-size: 18px;
           font-style: normal;
           font-weight: 500;
           line-height: 90%;
 
           @media(max-width: 992px) {
-            font-size: 20px;
+            font-size: 14px;
             font-style: normal;
             line-height: 90%;
           }
@@ -3444,12 +3462,16 @@
           & span {
             color: #FFF;
             text-align: center;
-            font-size: 30px;
+            font-size: 22px;
             font-style: normal;
             font-weight: 700;
             line-height: 90%;
             transition: all .3s ease-in;
             /* 27px */
+
+            @media(max-width: 992px) {
+              font-size: 16px;
+            }
           }
 
           & .icon {
@@ -3583,7 +3605,7 @@
               max-width: 90%;
 
               @media(max-width: 992px) {
-                font-size: 18px;
+                font-size: 14px;
                 font-style: normal;
                 line-height: 90%;
               }
