--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -2034,6 +2034,9 @@
           max-width: 100%;
           padding-left: 50px;
         }
+        @media(max-width: 992px) {
+          margin-bottom: 48px;
+        }
 
         & .tabs-hp-content__item {
 
@@ -2065,6 +2068,11 @@
               display: flex;
               align-items: center;
               justify-content: center;
+
+              @media(max-width: 992px) {
+                width: 32px;
+                height: 32px;
+              }
             }
           }
 
@@ -2097,7 +2105,7 @@
                 max-width: 316px;
 
                 @media(max-width: 992px) {
-                  font-size: 20px;
+                  font-size: 18px;
                   font-style: normal;
                   line-height: 90%;
                 }
